--- a/Standard Library.vcxproj
+++ b/Standard Library.vcxproj
@@ -5,29 +5,27 @@
       <Configuration>Debug</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
-    <ProjectConfiguration Include="Release|Win32">
-      <Configuration>Release</Configuration>
-      <Platform>Win32</Platform>
-    </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="array.h" />
-    <ClInclude Include="collections.h" />
-    <ClInclude Include="collections\linkedlist.h" />
-    <ClInclude Include="collections\list.h" />
-    <ClInclude Include="func.h" />
-    <ClInclude Include="math.h" />
-    <ClInclude Include="memory.h" />
-    <ClInclude Include="point.h" />
-    <ClInclude Include="collections\stack.h" />
-    <ClInclude Include="smartptr.h" />
-    <ClInclude Include="std.h" />
-    <ClInclude Include="string.h" />
-    <ClInclude Include="strops.h" />
-    <ClInclude Include="uuid.h" />
-    <ClInclude Include="version.h" />
+    <ClInclude Include="array.hpp" />
+    <ClInclude Include="collections.hpp" />
+    <ClInclude Include="enumeration.hpp" />
+    <ClInclude Include="func.hpp" />
+    <ClInclude Include="list.hpp" />
+    <ClInclude Include="math.hpp" />
+    <ClInclude Include="memory.hpp" />
+    <ClInclude Include="point.hpp" />
+    <ClInclude Include="smartptr.hpp" />
+    <ClInclude Include="stack.hpp" />
+    <ClInclude Include="std.hpp" />
+    <ClInclude Include="string.hpp" />
+    <ClInclude Include="time.hpp" />
+    <ClInclude Include="uuid.hpp" />
+    <ClInclude Include="version.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Impl\math.cpp" />
+    <ClCompile Include="Impl\memory.cpp" />
     <ClCompile Include="Impl\string.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -40,18 +38,10 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Makefile</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
-  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -65,11 +55,13 @@
     <SourcePath />
     <ExcludePath />
     <NMakeIncludeSearchPath>$(SolutionDir);$(SolutionDir)\include</NMakeIncludeSearchPath>
+    <OutDir>$(SolutionDir)\Build\tmp</OutDir>
+    <IntDir>$(SolutionDir)\Build\tmp</IntDir>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <NMakePreprocessorDefinitions>WIN32;NDEBUG;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
-  </PropertyGroup>
-  <ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <BuildLog>
+      <Path />
+    </BuildLog>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
