Implemented parts of the <type traits> library

--- a/Standard Library.vcxproj
+++ b/Standard Library.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="std.hpp" />
     <ClInclude Include="string.hpp" />
     <ClInclude Include="time.hpp" />
+    <ClInclude Include="meta.hpp" />
     <ClInclude Include="uuid.hpp" />
     <ClInclude Include="version.hpp" />
   </ItemGroup>
